fix: window controls z-index

--- a/src/renderer/components/modals/styles/AnimeModal.css
+++ b/src/renderer/components/modals/styles/AnimeModal.css
@@ -4,7 +4,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  margin: 25px 0;
+  margin: 45px 0 25px 0;
   color: var(--font-1);
   overflow-x: hidden;
   overflow-y: scroll;
@@ -203,7 +203,7 @@
 .anime-page .episodes-section .episodes-scroller {
   overflow: hidden;
   width: 100%;
-  margin-bottom: 25px;
+  /* margin-bottom: 25px; */
 }
 
 .anime-page .episodes-section .episodes-options {
