--- a/src/renderer/styles/WindowControls.css
+++ b/src/renderer/styles/WindowControls.css
@@ -1,9 +1,12 @@
 .controls {
-  position: relative;
+  position: fixed;
   display: flex;
   width: 100%;
   height: 22px;
   background-color: var(--color-0);
+
+  /* player is 900 :) */
+  z-index: 880;
 }
 
 .controls .drag {
